// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForemanModal rendering renders when header and footer are supplied 1`] = `
<ForemanModal
  id="withSuppliedChildren"
  onClose={[Function]}
  openState={
    Object {
      "open": true,
    }
  }
  title="Test modal"
>
  <ForemanModalHeader>
    this is the header
  </ForemanModalHeader>
  <div>
    This is the body
  </div>
  <ForemanModalFooter>
    this is the footer
  </ForemanModalFooter>
</ForemanModal>
`;

exports[`ForemanModal rendering sets open state to false based on redux state 1`] = `
<ForemanModal
  id="closed"
  onClose={[Function]}
  openState={
    Object {
      "open": false,
    }
  }
  title="open modal"
/>
`;

exports[`ForemanModal rendering sets open state to true based on redux state 1`] = `
<ForemanModal
  id="render"
  onClose={[Function]}
  openState={
    Object {
      "open": true,
    }
  }
  title="open modal"
/>
`;

exports[`ForemanModal rendering should render 1`] = `
<ForemanModal
  id="render"
  onClose={[Function]}
  openState={
    Object {
      "open": true,
    }
  }
  title="Test modal"
/>
`;

exports[`ForemanModal rendering should render closed 1`] = `
<ForemanModal
  id="closed"
  onClose={[Function]}
  openState={
    Object {
      "open": false,
    }
  }
  title="Test modal"
/>
`;
